--- a/package.json
+++ b/package.json
@@ -8,17 +8,29 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "dev:server": "npx netlify-cms-proxy-server",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.34",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.24.41",
+    "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-netlify-cms": "^4.3.11",
+    "gatsby-plugin-postcss": "^2.3.11",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.28",
     "netlify-cms-app": "^2.12.19",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "stylelint": "^13.6.1",
+    "tailwind.macro": "^1.0.0-alpha.10",
+    "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
