--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "^2.3.11",
+    "gatsby-plugin-sass": "^2.3.13",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-remark": "^2.8.28",
     "netlify-cms-app": "^2.12.19",
+    "node-sass": "^4.14.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.11.0",
     "stylelint": "^13.6.1",
     "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.6.2"
